--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,143 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <br>
+    <h1>Pipes</h1>
+    <hr>
+    <table class="table">
+        <thead class="thead-inverse">
+            <tr>
+                <th>Variable</th>
+                <th>Pipe</th>
+                <th>Result</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{name}}</td>
+                <td>uppercase</td>
+                <td>{{name|uppercase}}</td>
+            </tr>
+            <tr>
+                <td>{{name}}</td>
+                <td>lowercase</td>
+                <td>{{name|lowercase}}</td>
+            </tr>
+            <tr>
+                <td>{{name}}</td>
+                <td>slice: 3</td>
+                <td>{{name|slice: 3}}</td>
+            </tr>
+            <tr>
+                <td>{{name}}</td>
+                <td>slice: 0 - 3</td>
+                <td>{{name|slice: 0 :3}}</td>
+            </tr>
+            <tr>
+                <td>{{array}}</td>
+                <td>slice: 1 - 5</td>
+                <td>{{array|slice: 1 :5}}</td>
+            </tr>
+            <tr>
+                <td>{{PI}}</td>
+                <td>number: 3.0-0</td>
+                <td>{{PI|number: '3.0-0'}}</td>
+            </tr>
+            <tr>
+                <td>{{PI}}</td>
+                <td>number: 3.1-2</td>
+                <td>{{PI|number: '1.1-2'}}</td>
+            </tr>
+            <tr>
+                <td>{{a}}</td>
+                <td>percent</td>
+                <td>{{a| percent}}</td>
+            </tr>
+            <tr>
+                <td>{{a}}</td>
+                <td>percent: 2.2-2</td>
+                <td>{{a| percent: '2.2-2'}}</td>
+            </tr>
+            <tr>
+                <td>{{salary}}</td>
+                <td>currency</td>
+                <td>{{salary|currency}}</td>
+            </tr>
+            <tr>
+                <td>{{salary}}</td>
+                <td>currency: Eur</td>
+                <td>{{salary|currency: 'EUR'}}</td>
+            </tr>
+             <tr>
+                <td>{{salary}}</td>
+                <td>currency: Eur: true</td>
+                <td>{{salary|currency: 'EUR' :true}}</td>
+            </tr>
+            <tr>
+                <td>{{salary}}</td>
+                <td>currency: Eur: :true :4.0-0</td>
+                <td>{{salary|currency: 'EUR' :true :'4.0-0'}}</td>
+            </tr>
+            <tr>
+                <td>{{salary}}</td>
+                <td>number: '.2-2</td>
+                <td>{{salary|number: '.2-2'}}</td>
+            </tr>
+             <tr>
+                <td>{{promiseValue}}</td>
+                <td>Async</td>
+                <td>{{promiseValue|async}}</td>
+            </tr>
+            <tr>
+                <td>{{date}}</td>
+                <td>date</td>
+                <td>{{date|date}}</td>
+            </tr>
+            <tr>
+                <td>{{date}}</td>
+                <td>date: medium</td>
+                <td>{{date|date: 'medium'}}</td>
+            </tr>
+            <tr>
+                <td>{{date}}</td>
+                <td>date: 'MMMM' - dd'</td>
+                <td>{{date|date: 'MMMM - dd'}}</td>
+            </tr>
+            <tr>
+                <td>{{name2}}</td>
+                <td>myCapitalize</td>
+                <td>{{name2 | capitalize}}</td>
+            </tr>
+            <tr>
+                <td>{{name2}}</td>
+                <td>myCapitalize : false</td>
+                <td>{{name2 | capitalize: false}}</td>
+            </tr>
+            <tr>
+                <td>{{name}}</td>
+                <td>password : {{enable}}
+                <br>
+				<button
+					(click)="enable = !enable"
+					type="button"
+					class="btn btn-outline-primary">Enable/disable
+				</button>
+                </td>
+                <td>{{name | password: enable}}</td>
+
+            </tr>
+        </tbody>
+    </table>
+
+    <h4>Slice</h4>
+    <ul>
+    	<li *ngFor="let item of array | slice: 5 :20">{{item}}</li>
+    </ul>
+	<h4>JSON</h4>
+	<pre>
+		{{hero|json}}
+	</pre>
+
+	<h4>Youtube <small>videos</small></h4>
+	<iframe width="420" height="345" [src]="video | safedom: 'https://www.youtube.com/embed/'">
+</iframe>
+
+</div>
